--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,9 +1,11 @@
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
+spring.datasource.driverClassName=org.h2.Driver
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
