--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     url: jdbc:h2:mem:testdb
-    username: sa
+    username: root
     password:
     driverClassName: org.h2.Driver
   h2:
@@ -13,4 +13,4 @@ spring:
     show-sql: false
     properties:
       hibernate:
-        format_sql: true
+        format_sql: false
