--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,12 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/orderscommerce
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
 spring.datasource.username=postgres
-spring.datasource.password=123
-
+spring.datasource.password=postgrespw
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=update
-
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
-
-jwt.secret=MYJWTSECRET
-jwt.expiration=3600000
